// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-1q42p0o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div
    as="span"
    class="cache-1q42p0o-StyledContainer e1vt8sjg2"
    role="status"
  >
    <div
      aria-disabled="false"
      class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .cache-13cgenx-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div
    aria-label="bordered"
    as="span"
    class="cache-13cgenx-StyledContainer e1vt8sjg2"
    role="status"
  >
    <div
      aria-disabled="false"
      class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-ccb1lf-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div
    as="span"
    class="cache-ccb1lf-StyledContainer e1vt8sjg2"
    role="status"
  >
    <div
      aria-disabled="true"
      class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;
